# CppND-System-Monitor

./: .clang-format  CMakeLists.txt  Makefile  README.md
include/: format.h  linux_parser.h  ncurses_display.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: format_test.cpp  linux_parser_test.cpp  process_test.cpp  processor_test.cpp
